--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,8 @@
     "require": {
         "php": "^8.1",
         "firebase/php-jwt": "^6.11",
-        "guzzlehttp/guzzle": "^7.2",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "spatie/laravel-medialibrary": "^11.13"
     },
